# fav_ros1

./: .gitignore  README.md
fav_gazebo_plugins/: CMakeLists.txt  package.xml
fav_gazebo_plugins/include/: common.hpp
fav_gazebo_plugins/src/barometer/: barometer.cpp  barometer.hpp
fav_gazebo_plugins/src/buoyancy/: buoyancy.cpp  buoyancy.hpp
fav_gazebo_plugins/src/hydrodynamics/: hydrodynamics.cpp  hydrodynamics.hpp
fav_gazebo_plugins/src/range_sensor/: range_sensor.cpp  range_sensor.hpp
fav_gazebo_plugins/src/thruster/: thruster.cpp  thruster.hpp
fav_msgs/: CMakeLists.txt  package.xml
fav_sim/: CMakeLists.txt  package.xml
fav_sim/config/: mixer_default.yaml  tags_front_camera.yaml  tags_vertical_camera.yaml
fav_sim/include/fav_sim/mixer/: simple_mixer.hpp
fav_sim/launch/: gazebo_apriltag_tank_world.launch  gazebo_assignment2.launch  gazebo_empty_world.launch  keyboard_control.launch  simulation.launch  spawn_vehicle.launch  test.launch
fav_sim/models/bluerov/urdf/: bluerov.xacro  bluerov_params.xacro
fav_sim/models/range_sensor/urdf/: range_sensor_macro.xacro  range_sensor_params.xacro
fav_sim/models/sdf_models/apriltag_tank/: model.sdf
fav_sim/models/thruster/meshes/: propeller.dae
fav_sim/models/thruster/urdf/: thruster_macro.xacro  thruster_params.xacro
fav_sim/nodes/: keyboard_control.py  virtual_vision_pose.py
fav_sim/src/: esc_commander_node.cpp  simple_mixer.cpp  simple_mixer_node.cpp
fav_sim/worlds/: base.world  tank_with_range_tags.world  tank_with_tags.world
