<?xml version="1.0"?>
<package format="3">
    <name>fav_msgs</name>
    <version>0.0.0</version>
    <description>Message package</description>

    <maintainer email="thies.lennart.alff@tuhh.de">Thies Lennart Alff</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
</package>
